# BotsFramework

./: .gitignore  MT5BotFramework.pyproj  MT5BotFramework.sln  MT5BotsFramework.toml  README.md  __init__.py  requirements-dev.txt  requirements.txt  setting.py  settings.py  setup.cfg  setup.py
.github/workflows/: black.yml  pylint.yml
core/: abstract_strategy.py  controller.py  strategy.py  telegram_copy.py
core/management/: __init__.py
exceptions/: MetaTraderError.py  meta_trader_errors.py
src/BotsFramework/interfaces/: iservice.py
src/BotsFramework/interfaces/providers/: iaccount_info.py  iposition.py  isymbol_info.py
src/BotsFramework/templates/: bot_strategy.py  telegram_copy.py  typical_bot.py
src/MT5BotsFramework/: settings.py  status.py
src/MT5BotsFramework/core/: controller.py  strategy.py  telegram_copy.py
src/MT5BotsFramework/decorators/: initialize_account.py
src/MT5BotsFramework/exceptions/: mt5_errors.py
src/MT5BotsFramework/interfaces/: iaccount_info.py  iposition.py  iservice.py  isymbol_info.py
src/MT5BotsFramework/models/: data_models.py
src/MT5BotsFramework/templates/: bot_strategy.py  telegram_copy.py
src/MT5BotsFramework/tests/: test_controller.py  test_settings.py  test_status.py  test_strategy.py  test_telegram_copy.py
src/MT5BotsFramework/tools/: clean_data.py  pip_calculator.py  types_define.py
src/MT5BotsFramework/utils/: clean_data.py
strategy/: sma_copy_strategy_conf.json  test_strategy_conf.json
tests/: test_controller.py  test_status.py  test_strategy.py  test_telegram_copy.py
(+8 files in other folders)
