[metadata]
name = MT5BotsFramework
version = 1.1.1
author = Arian Ventura Rodríguez
author_email = arianventura94@gmail.com
description = MetaTrader5 Bots Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/firagapecoin/MT5BotFramework
project_urls =
    Bug Tracker = https://github.com/firagapecoin/MT5BotFramework/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src